# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: cubeShader.fs  cubeShader.vs  defaultShader.fs  depthTestingShader.fs  depthTestingShader.vs  grassShader.fs  grassShader.vs  screenShader.fs  screenShader.vs  shader.fs  shader.vs  skyboxShader.fs  skyboxShader.vs  stencilTestingShader.fs
src/: Camera.cc  Camera.h  Mesh.cc  Mesh.h  Model.cc  Model.h  ShaderProgram.cc  ShaderProgram.h  TextureLoader.cc  TextureLoader.h  main.cc
